force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Request</fullName>
            </value>
            <value>
                <fullName>Internal Appeals Not Exhausted</fullName>
            </value>
            <value>
                <fullName>Plan Not Elected into FERP</fullName>
            </value>
            <value>
                <fullName>Untimely Request</fullName>
            </value>
            <value>
                <fullName>Non-Medical Judgment Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>