force-app/main/default/objects/Case/fields/Reason_for_Deniel__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deniel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reason for Denial</label>
    <type>Checkbox</type>
</CustomField>