force-app/main/default/objects/Case/fields/Reason_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Review__c</fullName>
    <description>Ferp Demo</description>
    <label>Reason for Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My claim was denied (or partially denied)</fullName>
            </value>
            <value>
                <fullName>My request for prior authorization was denied (or partially denied)</fullName>
            </value>
            <value>
                <fullName>My coverage was retroactively cancelled (also known as a rescission of coverage)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>My claim was denied ( or partially denied, for example, my plan or issuer is not covering the cost of the claim at an in-network rate)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>