force-app/main/default/objects/Case/fields/Received_Date_FERP__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_FERP__c</fullName>
    <formula>DATEVALUE( Received_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date_FERP</label>
    <type>Date</type>
</CustomField>