force-app/main/default/objects/Case/fields/Recommended_Decision__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Decision__c</fullName>
    <label>Recommended Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>