force-app/main/default/objects/Case/fields/Recommended_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Speciality__c</fullName>
    <label>Recommended Speciality</label>
    <type>TextArea</type>
</CustomField>