force-app/main/default/objects/Case/fields/Redact_Decision_Letter__c.field-meta.xml
<CustomField>
    <fullName>Redact_Decision_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redact Decision Letter</label>
    <type>Checkbox</type>
</CustomField>