force-app/main/default/objects/Case/fields/Reference_Data__c.field-meta.xml
<CustomField>
    <fullName>Reference_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Letter Sample</label>
    <referenceTo>Program_Review_Type__c</referenceTo>
    <relationshipLabel>Cases (Decision Letter Sample)</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>