force-app/main/default/objects/Case/fields/Representative_if_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Representative_if_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Representative if Applicable</label>
    <type>Checkbox</type>
</CustomField>