force-app/main/default/objects/Case/fields/Request_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Request_Specialty__c</fullName>
    <label>Reviewer Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Speciality</valueSetName>
    </valueSet>
</CustomField>