force-app/main/default/objects/Case/fields/Requested_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Requested_Specialty__c</fullName>
    <label>Requested Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>