force-app/main/default/objects/Case/fields/Review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Due_Date__c</fullName>
    <label>Review Due Date</label>
    <type>DateTime</type>
</CustomField>