force-app/main/default/objects/Case/fields/Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee__c</fullName>
    <label>Review Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>