force-app/main/default/objects/Case/fields/Review_Fee_Unit__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee_Unit__c</fullName>
    <label>Review Fee Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Unit</valueSetName>
    </valueSet>
</CustomField>