force-app/main/default/objects/Case/fields/Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Start_Date__c</fullName>
    <label>Review Start Date</label>
    <type>Date</type>
</CustomField>