force-app/main/default/objects/Case/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Sub-Status</label>
    <type>TextArea</type>
</CustomField>