force-app/main/default/objects/Case/fields/Review_Sub_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Review_Sub_Status_f__c</fullName>
    <formula>IF(TEXT(Status) = &apos;Panel Review&apos;,  Review_Status__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Sub Status</label>
    <type>Text</type>
</CustomField>