force-app/main/default/objects/Case/fields/Send_Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Billing_To__c</fullName>
    <formula>IF(INCLUDES( Account.Send_Billing_To__c , &quot;Client; &quot;), &quot;Client&quot;, NULL)  &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Enrollee; &quot;), &quot;Enrollee&quot;, NULL)  &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Health Plan; &quot;), &quot;Health Plan&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Law Firm; &quot;), &quot;Law Firm&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;MCO; &quot;), &quot;MCO&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Provider; &quot;), &quot;Provider&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Provider Representative; &quot;), &quot;Provider Representative&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Health Plan; &quot;), &quot;Health Plan&quot;, NULL) &amp;
IF(INCLUDES( Account.Send_Billing_To__c , &quot;Representative&quot;), &quot;Representative&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Billing To</label>
    <type>Text</type>
</CustomField>