force-app/main/default/objects/Case/fields/Senior_Consultant_Hours__c.field-meta.xml
<CustomField>
    <fullName>Senior_Consultant_Hours__c</fullName>
    <label>Senior Consultant Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>