force-app/main/default/objects/Case/fields/Senior_Consultant_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Senior_Consultant_Hours_Comment__c</fullName>
    <label>Senior Consultant Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>