force-app/main/default/objects/Case/fields/Senior_Consultant_Rate__c.field-meta.xml
<CustomField>
    <fullName>Senior_Consultant_Rate__c</fullName>
    <label>Senior Consultant Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>