force-app/main/default/objects/Case/fields/Senior_Consultant_Total__c.field-meta.xml
<CustomField>
    <fullName>Senior_Consultant_Total__c</fullName>
    <formula>IF(ISNULL( Senior_Consultant_Hours__c ) ,  Senior_Consultant_Rate__c , Senior_Consultant_Hours__c  *  Senior_Consultant_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Consultant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>