force-app/main/default/objects/Case/fields/Sentence_Structure_Decision__c.field-meta.xml
<CustomField>
    <fullName>Sentence_Structure_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sentence Structure</label>
    <type>Checkbox</type>
</CustomField>