force-app/main/default/objects/Case/fields/Specialty_of_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Specialty_of_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialty of Reviewer</label>
    <type>Checkbox</type>
</CustomField>