force-app/main/default/objects/Case/fields/Standard_Of_Review__c.field-meta.xml
<CustomField>
    <fullName>Standard_Of_Review__c</fullName>
    <label>Standard of Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>