force-app/main/default/objects/Case/fields/Start_DOS__c.field-meta.xml
<CustomField>
    <fullName>Start_DOS__c</fullName>
    <label>Start DOS</label>
    <type>Date</type>
</CustomField>