force-app/main/default/objects/Case/fields/Statement_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Issue__c</fullName>
    <label>Statement of Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>