force-app/main/default/objects/Case/fields/Summaries_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Summaries_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summaries Accurate</label>
    <type>Checkbox</type>
</CustomField>