force-app/main/default/objects/Case/fields/Summary_Review__c.field-meta.xml
<CustomField>
    <fullName>Summary_Review__c</fullName>
    <label>Summary (Review)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>