force-app/main/default/objects/Case/fields/Total_Award__c.field-meta.xml
<CustomField>
    <fullName>Total_Award__c</fullName>
    <label>Total Award</label>
    <length>255</length>
    <type>Text</type>
</CustomField>