force-app/main/default/objects/Case/fields/Updated_By_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_MDIRO__c</fullName>
    <label>Updated By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>