force-app/main/default/objects/Case/fields/Updated_Date_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_MDIRO__c</fullName>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>