force-app/main/default/objects/Case/fields/Was_Panel_Reviewer_an_MD_or_DO__c.field-meta.xml
<CustomField>
    <fullName>Was_Panel_Reviewer_an_MD_or_DO__c</fullName>
    <inlineHelpText>The field applies to PA project.</inlineHelpText>
    <label>Is Panel Reviewer an MD or DO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>