force-app/main/default/objects/Case/recordTypes/FERP.recordType-meta.xml
<RecordType>
    <fullName>FERP</fullName>
    <active>true</active>
    <businessProcess>State Appeals</businessProcess>
    <label>FERP</label>
</RecordType>